--- a/md/08.md
+++ b/md/08.md
@@ -189,7 +189,7 @@ Buenas tardes.
 Crea un programa que solicite al usuario dos valores enteros, los compare y muestre por pantalla si uno es mayor que el otro o si son iguales.
 
 ```Python
-numero1 = input("Introduce un número: ")
+numero1 = input("Sartu zenbaki bat:")
 numero2 = input("Introduce otro número: ")
 
 if numero1 > numero2:
@@ -203,7 +203,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 5
+Sartu zenbaki bat:5
 Introduce otro número: 10
 5 es menor que 10
 ```
@@ -216,7 +216,7 @@ Introduce otro número: 10
 Crea un programa que solicite al usuario dos valores enteros y muestre por pantalla si el primero es múltiplo del segundo. Para saber si un número es múltiplo del otro, debes hacer la operación módulo (%) entre ellos: si es 0, será múltiplo.
 
 ```Python
-numero1 = input("Introduce un número: ")
+numero1 = input("Sartu zenbaki bat:")
 numero2 = input("Introduce otro número: ")
 
 resto = int(numero1) % int(numero2)
@@ -230,7 +230,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 40
+Sartu zenbaki bat:40
 Introduce otro número: 4
 40 es múltiplo de 4
 ```
@@ -240,7 +240,7 @@ Introduce otro número: 4
 Crea un programa que solicite al usuario un número entero y haga lo siguiente: primero debe mostrar por pantalla si el número es negativo o positivo. Luego, si el número es positivo lo debe convertir a negativo y si es negativo lo debe convertir a positivo.
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero >= 0:
@@ -256,7 +256,7 @@ print("Conversión: ", numero)
 Resultado:
 
 ```console
-Introduce un número: -6
+Sartu zenbaki bat:-6
 -6 es negativo
 Conversión: 6
 ```
@@ -308,7 +308,7 @@ Introduce un mes del año: Junio
 Crea un programa que solicite al usuario un número entero y muestre por pantalla si ese número es par y positivo. En caso contrario debe indicar si es negativo, impar o ambos.
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero >= 0 and numero % 2 == 0:
@@ -324,7 +324,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: -9
+Sartu zenbaki bat:-9
 -9 es impar y negativo
 ```
 
