--- a/md/09.md
+++ b/md/09.md
@@ -148,7 +148,7 @@ Eso nos puede ser útil en muchos programas.
 Escribe un programa que solicite un número al usuario y muestre su tabla de multiplicar del 0 al 10.
 
 ```Python
-valor = input("Introduce un número: ")
+valor = input("Sartu zenbaki bat:")
 valor = int(valor)
 
 for i in range(11):
@@ -160,7 +160,7 @@ for i in range(11):
 Resultado:
 
 ```console
-Introduce un número: 3
+Sartu zenbaki bat:3
 0 x 3 = 0
 1 x 3 = 3
 2 x 3 = 6
@@ -171,7 +171,7 @@ Introduce un número: 3
 Escribe un programa que pida un número al usuario. Si es igual o menor a 0 debe indicar que meta algo mayor, y si no, debe mostrar el mensaje "Python mola!" por pantalla tantas veces como indique el número:
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero <= 0:
@@ -184,7 +184,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 3
+Sartu zenbaki bat:3
 Python mola!
 Python mola!
 Python mola!
@@ -263,7 +263,7 @@ El resultado sería:
 Escribe un programa que pida un número al usuario. Luego debe mostrar todos los números pares desde 0 hasta el número que haya metido el usuario. Utiliza un bucle for y salta de dos en dos.
 
 ```Python
-valor = input("Introduce un número: ")
+valor = input("Sartu zenbaki bat:")
 valor = int(valor)
 
 for i in range(0, valor, 2):
@@ -273,7 +273,7 @@ for i in range(0, valor, 2):
 Resultado:
 
 ```console
-Introduce un número: 5
+Sartu zenbaki bat:5
 0
 2
 4
@@ -417,7 +417,7 @@ Crea un programa que solicite al usuario un valor entero, comprueba si es mayor 
 Si el valor introducido no cumple los requisitos debes mostrar un mensaje de advertencia al usuario y terminar el programa.
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero <= 0 or numero % 2 != 0:
@@ -434,7 +434,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 6
+Sartu zenbaki bat:6
 ******
 ```
 
@@ -455,7 +455,7 @@ Y siempre debe terminar en *
 Por ejemplo, si introducen el 4: *-*-*
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero <= 0 or numero % 2 != 0:
@@ -475,7 +475,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 8
+Sartu zenbaki bat:8
 *-*-*-*-*
 ```
 
@@ -491,7 +491,7 @@ Crea un programa que solicite al usuario un número entero y usando ese valor de
 ```
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero <= 0:
@@ -510,7 +510,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 2
+Sartu zenbaki bat:2
 **
 **
 ```
@@ -520,7 +520,7 @@ Introduce un número: 2
 Crea un programa que solicite al usuario un número entero y calcule su factorial. Por ejemplo el factorial de 5 sería 5 x 4 x 3 x 2 x 1 = 120
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero <= 0:
@@ -537,7 +537,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 4
+Sartu zenbaki bat:4
 Resultado: 24
 ```
 
@@ -546,7 +546,7 @@ Resultado: 24
 Crea un programa que solicite al usuario un número entero y comprueba si ese número es primo o no, es decir si solamente es divisible por sí mismo o por 1.
 
 ```Python
-numero = input("Introduce un número: ")
+numero = input("Sartu zenbaki bat:")
 numero = int(numero)
 
 if numero <= 0:
@@ -572,7 +572,7 @@ else:
 Resultado:
 
 ```console
-Introduce un número: 5
+Sartu zenbaki bat:5
 5 es primo.
 ```
 
