--- a/md/10.md
+++ b/md/10.md
@@ -240,7 +240,7 @@ Utiliza el diccionario telefonos del ejercicio anterior. Solicita al usuario dat
 telefonos = {"Ada": 666555333, "Bug": 111000111 }
 
 nombre = input("Introduce un nombre: ")
-telefono = input("Introduce un número: ")
+telefono = input("Sartu zenbaki bat:")
 
 telefonos[nombre] = int(telefono)
 
@@ -252,7 +252,7 @@ Resultado:
 
 ```console
 Introduce un nombre: Neko
-Introduce un número: 333222000
+Sartu zenbaki bat:333222000
 Ada 666555333
 Neko 333222000
 Bug 111000111
