--- a/md/12.md
+++ b/md/12.md
@@ -327,7 +327,7 @@ def positivo(valor)
 Y otra función que reciba dos números y calcule la potencia entre ellos.
 
 ```Python
-def potencia(valor1, valor2)
+def potencia(balio1, balio2)
 ```
 
 Debes llamar a la segunda función pasando como parámetros:
@@ -349,8 +349,8 @@ def positivo (valor):
 ```
 
 ```Python
-def potencia (valor1, valor2):
-    return valor1 \*\* valor2
+def potencia (balio1, balio2):
+    return balio1 \*\* balio2
 
 print(positivo(-1))
 print(potencia(2, 3))
@@ -453,13 +453,13 @@ Cualquiera puede escribir funciones y agrupar el código en pequeñas partes. Pe
 Escribe una función que reciba dos números, detecte cuál es más grande y muestre la diferencia entre ellos.
 
 ```Python
-def diferencia (valor1, valor2):
+def diferencia (balio1, balio2):
     diferencia = 0
 
-    if valor1 > valor2:
-        diferencia = valor1 - valor2
+    if balio1 > balio2:
+        diferencia = balio1 - balio2
     else:
-        diferencia = valor2 - valor1
+        diferencia = balio2 - balio1
 
     print("La diferencia es: ", diferencia)
 
@@ -479,11 +479,11 @@ La diferencia es: 8
 Escribe un programa que reciba dos números y un signo de operación aritmética: +, -, *, /. La función debe retornar el resultado de esa operación entre los dos números.
 
 ```Python
-def calcular (valor1, valor2, op):
-    if op ==  "+": return valor1 + valor2
-    elif op == "-": return valor1 - valor2
-    elif op == "*": return valor1 * valor2
-    elif op == "/": return valor1 / valor2
+def calcular (balio1, balio2, op):
+    if op ==  "+": return balio1 + balio2
+    elif op == "-": return balio1 - balio2
+    elif op == "*": return balio1 * balio2
+    elif op == "/": return balio1 / balio2
     else: return "Operación desconocida"
 
 resultado = calcular(4, 6, "*")
