--- a/md/13.md
+++ b/md/13.md
@@ -487,41 +487,41 @@ Escribe un programa que defina una clase llamada `Sumador`, la cual se instancia
 
 ```Python
 class Sumador:
-    def  _ _init _ _(self, valor1, valor2):
-        self.valor1 = valor1
-        self.valor2 = valor2
+    def  _ _init _ _(self, balio1, balio2):
+        self.balio1 = balio1
+        self.balio2 = balio2
 
     @property
-    def valor1 (self):
-        return self. _valor1
+    def balio1 (self):
+        return self. _balio1
 
-    @valor1.setter
-    def valor1 (self, valor1):
-        if valor1 > 0:
-            self. _valor1 = valor1
+    @balio1.setter
+    def balio1 (self, balio1):
+        if balio1 > 0:
+            self. _balio1 = balio1
         else:
-            self. _valor1 = 0
+            self. _balio1 = 0
 
     @property
-    def valor2 (self):
-        return self. _valor2
+    def balio2 (self):
+        return self. _balio2
 
-    @valor2.setter
-    def valor2 (self, valor2):
-        if valor2 > 0:
-            self. _valor2 = valor2
+    @balio2.setter
+    def balio2 (self, balio2):
+        if balio2 > 0:
+            self. _balio2 = balio2
         else:
-            self. _valor2 = 0
+            self. _balio2 = 0
 
     def sumar (self):
-        return self. _valor1 + self. _valor2
+        return self. _balio1 + self. _balio2
 
 
 sumador = Sumador(28, 14)
 print(sumador.sumar())
 
-sumador.valor1 = 600
-sumador.valor2 = 66
+sumador.balio1 = 600
+sumador.balio2 = 66
 print(sumador.sumar())
 ```
 
