--- a/md/14.md
+++ b/md/14.md
@@ -11,7 +11,7 @@ A estas alturas puede que ya seas excelente en programación. Pero aún así, tu
 Por ejemplo, supongamos que tenemos un programa muy simple como el siguiente, en el que se le pide un número al usuario y se hace una multiplicación:
 
 ```Python
-valor = input("Introduce un número: ")
+valor = input("Sartu zenbaki bat:")
 valor = int(valor)
 cuadrado = valor  * valor
 print("El cuadrado es: ", cuadrado)
@@ -20,7 +20,7 @@ print("El cuadrado es: ", cuadrado)
 Si el usuario introduce lo que no debe, veremos lo siguiente:
 
 ```Python
-Introduce un número: x
+Sartu zenbaki bat:x
 Traceback (most recent call last):
   File "saltaexcepcion.py", line 2, in <module>
     valor = int(valor)
@@ -39,7 +39,7 @@ except:
 Veamos el ejemplo anterior, protegiendo el código sensible dentro del bloque de excepción:
 
 ```Python
-valor = input("Introduce un número: ")
+valor = input("Sartu zenbaki bat:")
 
 try:
     valor = int(valor)
@@ -52,7 +52,7 @@ except:
 Ahora si se mete un dato incorrecto, veremos lo siguiente:
 
 ```console
-Introduce un número: x
+Sartu zenbaki bat:x
 Error al convertir dato!
 ```
 
