--- a/md/16.md
+++ b/md/16.md
@@ -26,10 +26,10 @@ Ahora podemos incluir ese fichero en otro programa mediante la orden import. Si 
 ```Python
 import mates
 
-valor1 = 5
-valor2 = 10
+balio1 = 5
+balio2 = 10
 
-resultado = mates.sumar(valor1, valor2)
+resultado = mates.sumar(balio1, balio2)
 print(resultado)  # 15
 ```
 
@@ -78,7 +78,7 @@ Con las clases se puede hacer exactamente lo mismo. Supongamos que tenemos una c
 
 ```Python
 class LectorPantalla:
-    def leerEntero (self, mensaje = "Introduce un número: "):
+    def leerEntero (self, mensaje = "Sartu zenbaki bat:"):
         numero = input(mensaje)
         return int(numero)
 
@@ -94,15 +94,15 @@ import lector_pantalla
 import mates
 
 lector = lector_pantalla.LectorPantalla()
-valor1 = lector.leerEntero()
+balio1 = lector.leerEntero()
 
-print(mates.incrementar(valor1))
+print(mates.incrementar(balio1))
 ```
 
 Por pantalla se podría ver algo así:
 
 ```console
-Introduce un número: 6
+Sartu zenbaki bat:6
 7
 ```
 
