--- a/md/07.md
+++ b/md/07.md
@@ -9,8 +9,8 @@ Los programas necesitan hacer cálculos con números, procesar datos, tomar deci
 Son todos aquellos que te permitirán hacer sumas, restas y todas los cálculos básicos con valores y con aquello que se guarde en variables, como por ejemplo, la suma:
 
 ```Python
-chicles = 4
-chicles = chicles + 2
+goxokiak = 4
+goxokiak = goxokiak + 2
 ```
 
 El programa calcula que de tener 4 chicles, has pasado a tener 6. Las operaciones básicas en programación son:
@@ -24,11 +24,11 @@ El programa calcula que de tener 4 chicles, has pasado a tener 6. Las operacione
 Por ejemplo para calcular el total de segundos que tiene un día:
 
 ```console
-minutos = 60
-segundos = 60
-horas = 24
+minutuak = 60
+segunduak = 60
+orduak = 24
 
-totalSegundos = segundos * minutos * horas
+segunduakEgunBatean = segunduak * minutuak * orduak
 ```
 
 Puedes hacer operaciones tan complejas como hagan falta. Para que estas sean más fáciles de leer se pueden utilizar paréntesis como se hace en mates:
@@ -37,7 +37,7 @@ Puedes hacer operaciones tan complejas como hagan falta. Para que estas sean má
 ada = 14
 bug = 10
 neko = 2
-media = (ada + bug + neko) / 3
+batazbestekoa = (ada + bug + neko) / 3
 ```
 
 ### 7.1.1    Ejercicio 0.5
@@ -45,17 +45,17 @@ media = (ada + bug + neko) / 3
 Escribe un programa que solicite un número al usuario y le reste 5. A continuación debe mostrar el resultado por la consola.
 
 ```Python
-valor = input("Introduce un número: ")
-resultado = int(valor) - 5
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) - 5
 
-print("La resta es:", resultado)
+print("Enaitza da:", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 30
-La resta es: 25
+Sartu zenbaki bat:  30
+Enaitza da: 25
 ```
 
 ### 7.1.2    Módulo y exponencial
@@ -63,8 +63,8 @@ La resta es: 25
 Hay una operación muy importante en programación, que quizá no sea tan frecuente en tu clase de mates: se trata del módulo. Es una división que devuelve el residuo en lugar del resultado de la división:
 
 ```Python
-valor = 8
-resultado = valor % 3
+balioa = 8
+emaitza = balioa % 3
 ```
 
 El valor de resultado será: 2.
@@ -72,8 +72,8 @@ El valor de resultado será: 2.
 El exponencial es el resultado de multiplicar un número por sí mismo varias veces. En Python se puede hacer esta operación con el operador **:
 
 ```Python
-valor = 2
-resultado = valor ** 3 # equivale a: 2 * 2 * 2
+balioa = 2
+emaitza = balioa ** 3 # baliokidea: 2 * 2 * 2
 ```
 
 El resultado sería 8.
@@ -89,11 +89,11 @@ Como bien sabes, hay números menores que cero llamados negativos, que se repres
 Si queremos cambiar el signo de un número podemos poner un - por delante:
 
 ```Python
-temperatura = -11
-cuenta = 200
+tenperatura = -11
+kontagailua = 200
 
-temperatura = -temperatura   11
-cuenta = -cuenta    # -200
+tenperatura = -tenperatura  11
+kontagailua = -kontagailua # -200
 ```
 
 ### 7.1.4    Operadores abreviados
@@ -101,15 +101,15 @@ cuenta = -cuenta    # -200
 En muchas ocasiones, tendrás que operar sobre una variable y guardar el resultado en la propia variable:
 
 ```Python
-contador = 0
-contador = contador + 2
+kontagailua = 0
+kontagailua = kontagailua + 2
 ```
 
 En ese tipo de situaciones, puedes usar un operador abreviado, el cual hace la operación y asigna al mismo tiempo. Esto sería equivalente al anterior código:
 
 ```console
-contador = 0
-contador += 2
+kontagailua = 0
+kontagailua += 2
 ```
 
 Lo mismo se puede hacer con todos los operadores:
@@ -130,22 +130,22 @@ Escribe un programa que solicite un número al usuario y lo incremente. A contin
 ¡Utiliza operadores abreviados!
 
 ```Python
-valor = input("Introduce un número: ")
-valor += 1
+balioa = input("Sartu zenbaki bat: ")
+balioa += 1
 
-print("El incremento es", valor)
+print("Inkrementua da", balioa)
 
-valor -= 1
+balioa -= 1
 
-print("El decremento es", valor)
+print("Dekrementua da", balioa)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 6
-El incremento es 7
-El decremento es 6
+Sartu zenbaki bat: 6
+Inkrementua da 7
+Dekrementua das 6
 ```
 
 7.2  Operadores de comparación
@@ -156,8 +156,8 @@ Se trata de operadores que nos permiten comparar un valor con otro. Generalmente
 Por ejemplo, para comprobar si un valor es igual a otro usamos el operador: ==
 
 ```Python
-valor = 5
-resultado = valor == 5
+balioa = 5
+emaitza = balioa == 5
 ```
 
 El resultado sería True.
@@ -176,8 +176,8 @@ Los operadores de comparación serían:
 También puede utilizarse este operador con texto, tanto para comprobar la igualdad:
 
 ```Python
-nombre = "Ada"
-resultado = nombre == "Bug"
+izena = "Ada"
+emaitza = izena == "Bug"
 ```
 
 El resultado sería False.
@@ -185,8 +185,8 @@ El resultado sería False.
 También nos permite comparar si un texto es mayor o menor en orden alfabético:
 
 ```Python
-nombre = "Ada"
-resultado = "Ada" < "Bug"
+izena = "Ada"
+emaitza = "Ada" < "Bug"
 ```
 
 El resultado sería True.
@@ -198,20 +198,20 @@ El resultado sería True.
 Escribe un programa que solicite dos números al usuario. Después debe comparar su desigualdad y debe mostrar el resultado por la consola.
 
 ```Python
-valor1 = input("Introduce un número: ")
-valor2 = input("Introduce otro número: ")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat:")
 
-resultado = valor1 != valor2
+emaitza = balio1 != balio2
 
-print("¿Son distintos?", resultado)
+print("Desberdinak al dira?", emaitza)
 ```
 
 Resultado:
 
 ```Python
-Introduce un número: 42
-Introduce otro número: 42
-¿Son distintos? False
+Sartu zenbaki bat: 42
+Sartu beste zenbaki bat: 42
+Desberdinak al dira? False
 ```
 
 7.3  Operadores booleanos
@@ -224,8 +224,8 @@ Los operadores booleanos nos permiten hacer operaciones con valores booleanos Tr
 Este operador solo devuelve True si los dos operandos también son True:
 
 ```Python
-valor = 5
-resultado = (valor == 5) and True;
+balioa = 5
+emaitza = (balioa == 5) and True;
 ```
 
 El resultado sería True. Para resumir todas las posibles opciones, esta sería lo que se denomina tabla de la verdad del operador and.
@@ -244,18 +244,18 @@ El resultado sería True. Para resumir todas las posibles opciones, esta sería 
 Escribe un programa que solicite un número al usuario. Después debe comparar si el primero es mayor que 0 y además es par.
 
 ```Python
-valor = input("Introduce un número: ")
-valor = int(valor)
-resultado = (valor >= 0) and (valor % 2 == 0)
+balioa = input("Zenbaki bat sartu: ")
+balioa = int(balioa)
+emaitza = (balioa >= 0) and (balioa % 2 == 0)
 
-print("¿Es par y positivo?", resultado)
+print("Bikoitza eta positiboa da?", emaitza)
 ```
 
 Resultado:
 
 ```Python
-Introduce un número: 14
-¿Es par y positivo? True
+Zenbaki bat sartu: 14
+Bikoitza eta positiboa da? True
 ```
 
 ### 7.3.3    or
@@ -263,8 +263,8 @@ Introduce un número: 14
 Este operador devuelve True si cualquiera de los dos operandos también son True:
 
 ```Python
-valor = 5
-resultado = (valor == 5) or True;
+balioa = 5
+emaitza = (balioa == 5) or True;
 ```
 
 El resultado sería True. Para resumir todas las posibles opciones, esta sería la tabla de la verdad del operador or:
@@ -282,20 +282,20 @@ El resultado sería True. Para resumir todas las posibles opciones, esta sería 
 Escribe un programa que solicite dos números al usuario y compruebe si alguno de los dos es positivo. A continuación debe mostrar el resultado por la consola.
 
 ```Python
-valor1 = input("Introduce un número: ")
-valor2 = input("Introduce otro número: ")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat: ")
 
-resultado = (int(valor1) >= 0) or (int(valor2) >= 0)
+emaitza = (int(balio1) >= 0) or (int(balio2) >= 0)
 
-print("¿Es alguno de los dos positivo?", resultado)
+print("Zenbaki batek ala besteek positiboa dute?", emaitza)
 ```
 
 Resultado:
 
 ```Python
-Introduce un número: -4
-Introduce otro número: 6
-¿Es alguno de los dos positivo? True
+Sartu zenbaki bat:-4
+Sartu beste zenbaki bat: 6
+Zenbaki batek ala besteek positiboa dute? True
 ```
 
 ### 7.3.5    not
@@ -303,8 +303,8 @@ Introduce otro número: 6
 Este operador devuelve el valor contrario al operando. Si se aplica a True devuelve False y si se aplica a False devuelve True:
 
 ```console
-valor = True
-resultado = not valor;
+balioa = True
+emaitza = not balioa;
 ```
 
 El resultado sería False. Para resumir todas las posibles opciones, esta sería la tabla de la verdad del operador not.
@@ -322,18 +322,18 @@ El resultado sería False. Para resumir todas las posibles opciones, esta sería
 Escribe un programa que solicite un número al usuario y compruebe que no es ni positivo ni par.
 
 ```Python
-valor = input("Introduce un número: ")
-valor = int(valor)
+balioa = input("Sartu zenbaki bat: ")
+balioa = int(balioa)
 
-positivoYPar = (valor >= 0) and (valor % 2 == 0)
-resultado = not positivoYPar
-print("¿No es par y positivo?", resultado)
+positiboaEtaBikoitia = (balioa >= 0) and (balioa % 2 == 0)
+emaitza = not positiboaEtaBikoitia
+print("Bikoitia eta positiboa al da?", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: -4
+Sartu zenbaki bat:-4
 ¿No es par y positivo? True
 ```
 
@@ -342,9 +342,9 @@ Introduce un número: -4
 Podemos combinar los operadores tanto como necesitemos:
 
 ```Python
-jubilado = 65
-if edad > 17 and edad < (jubilado + 1):
-    print("Ya puedes trabajar")
+jubilatua = 65
+if adina > 17 and adina < (jubilatua + 1):
+    print("Lan egitea daukazu")
 ```
 
 Generalmente, los operadores condicionales se utilizan dentro de las condiciones de los bloques condicionales, bucles, etc.
@@ -359,17 +359,17 @@ Generalmente, los operadores condicionales se utilizan dentro de las condiciones
 Escribe un programa que solicite un número al usuario y le multiplique 7. A continuación debe mostrar el resultado por la consola.
 
 ```Python
-valor = input("Introduce un número: ")
-resultado = int(valor) * 7
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) * 7
 
-print("La multiplicación es:", resultado)
+print("Biderketa honakoa da:", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 3
-La multiplicación es: 21
+Sartu zenbaki bat:3
+Biderketa honakoa da:" 21
 ```
 
 ### 7.4.2    Ejercicio 0.1
@@ -377,17 +377,17 @@ La multiplicación es: 21
 Escribe un programa que solicite un número al usuario y lo divida por 2. A continuación debe mostrar el resultado por la consola.
 
 ```Python
-valor = input("Introduce un número: ")
-resultado = int(valor) / 2
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) / 2
 
-print("La división es:", resultado)
+print("Zatiketa da:", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 60
-La división es: 30
+Sartu zenbaki bat:60
+Zatiketa da: 30
 ```
 
 ### 7.4.3    Ejercicio 0.2
@@ -395,17 +395,17 @@ La división es: 30
 Escribe un programa que solicite un número al usuario y haga módulo 3. A continuación debe mostrar el resultado por la consola.
 
 ```Python
-valor = input("Introduce un número: ")
-resultado = int(valor) % 3
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) % 3
 
-print("El módulo es:", resultado)
+print("Modulua honako hau da:", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 7
-El módulo es: 1
+Sartu zenbaki bat:7
+Modulua honako hau da: 1
 ```
 
 ### 7.4.4    Ejercicio 0.3
@@ -413,17 +413,17 @@ El módulo es: 1
 Escribe un programa que solicite un número al usuario y le aplique un exponencial de 2. A continuación debe mostrar el resultado por la consola.
 
 ```Python
-valor = input("Introduce un número: ")
-resultado = int(valor) ** 2
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) ** 2
 
-print("El exponencial es:", resultado)
+print("Bikoizketaren emaitza:", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 4
-El exponencial es: 16
+Sartu zenbaki bat:4
+Bikoizketaren emaitza: 16
 ```
 
 ### 7.4.5    Ejercicio 0.4
@@ -431,18 +431,18 @@ El exponencial es: 16
 Escribe un programa que solicite un número al usuario y le reste 5. A continuación debe cambiarle el signo y mostrar el resultado por la consola.
 
 ```Python
-valor = input("Introduce un número: ")
-resta = int(valor) - 5
-resultado = -resta
+balioa = input("Sartu zenbakia: ")
+kenketa = int(balioa) - 5
+emaitza = -kenketa
 
-print("La resta final es:", resultado)
+print("Kenketa azkena da:", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 4
-La resta final es: 1
+Sartu zenbaki bat:4
+Kenketa azkena da: 1
 ```
 
 ### 7.4.6    Ejercicio 0.5
@@ -450,19 +450,19 @@ La resta final es: 1
 Escribe un programa que solicite un número al usuario. Después debe comprobar si la operación % 2 es igual a 0 y mostrar el resultado. Si se divide un número por 2 y la resta es 0, significa que ese número es par.
 
 ```Python
-valor = input("Introduce un número: ")
-modulo = int(valor) % 2
+balioa = input("Sartu zenbaki bat: ")
+moduloa = int(balioa) % 2
 
-resultado = modulo == 0
+emaitza = moduloa == 0
 
-print("¿Valor es par?", resultado)
+print("Balioa bikoitia al da?", emaitza)
 ```
 
 Resultado
 
 ```console
-Introduce un número: 8
-¿Valor es par? True
+Sartu zenbaki bat: 8
+Balioa bikoitia al da? True
 ```
 
 ### 7.4.7    Ejercicio 0.6
@@ -470,18 +470,18 @@ Introduce un número: 8
 Escribe un programa que solicite un número al usuario. Después debes comprobar si ese número es mayor o igual que 0, es decir, positivo.
 
 ```Python
-valor = input("Introduce un número: ")
+balioa = input("Sartu zenbaki bat: ")
 
-resultado = int(valor) >= 0
+emaitza = int(balioa) >= 0
 
-print("¿Es positivo?", resultado)
+print("Positiboa da?", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: 6
-¿Es positivo? True
+Sartu zenbaki bat: 6
+Positiboa da? True
 ```
 
 ### 7.4.8    Ejercicio 0.7
@@ -489,18 +489,18 @@ Introduce un número: 6
 Escribe un programa que solicite un número al usuario. Después debe comparar si el primero es menor que 0 y mostrar el resultado por la consola. Estaríamos detectando si el número es negativo.
 
 ```Python
-valor = input("Introduce un número: ")
+balioa = input("Sartu zenbaki bat: ")
 
-resultado = int(valor) < 0
+emaitza = int(balioa) < 0
 
-print("¿Es negativo?", resultado)
+print("Negatiboa da?", emaitza)
 ```
 
 Resultado:
 
 ```console
-Introduce un número: -3
+Sartu zenbaki bat: -3
 
-¿Es negativo? True
+Negatiboa da? True
 ```
 
