--- a/md/08.md
+++ b/md/08.md
@@ -13,41 +13,41 @@ Las condiciones son estructuras de programación que nos permiten que un código
 La estructura más simple para hacer una condición es el if, el cual tiene este aspecto:
 
 ```Python
-if *condición*:
-    *instrucciones*
-    *instrucciones*
+if *baldintza*:
+    *eragiketak*
+    *eragiketak*
     *...*
 ```
 
 Como puedes observar, if comienza con una condición. La condición puede ser cualquier expresión que devuelva un booleano, es decir, será True o False, verdadero o falso. Si es True, las instrucciones dentro del if se ejecutarán, y si no se saltarán. Por ejemplo:
 
 ```Python
-valor = -2
-if valor < 0:
-    print("El valor es menor que 0")
-print("Fin del programa")
+balioa = -2
+if balio < 0:
+    print("Balioa 0 baino txikiagoa da")
+print("Programaren amaiera")
 ```
 
 Resultaría en:
 
 ```console
-El valor es menor que 0
-Fin del programa
+Balioa 0 baino txikiagoa da
+Programaren amaiera
 ```
 
 En cambio:
 
 ```Python
-valor = 5
-if valor < 0:
-    print("El valor es menor que 0")
-print("Fin del programa")
+balioa = 5
+if balioa < 0:
+    print("Balioa 0 baino txikiagoa da")
+print("Programaren amaiera")
 ```
 
 Resultaría en:
 
 ```console
-Fin del programa
+Programaren amaiera
 ```
 
 Nota:
@@ -59,17 +59,17 @@ También debes observar algo muy importante: las instrucciones dentro del if van
 Escribe un programa que solicite un número al usuario y compruebe si es negativo. So es negativo, debe mostrar un mensaje por consola.
 
 ```Python
-valor = input("Escribe un número: ")
+balioa = input("Idatzi zenbaki bat: ")
 
-if int(valor) < 0:
-    print("Es negativo")
+if int(balioa) < 0:
+    print("Negatiboa da")
 ```
 
 Resultado:
 
 ```console
-Escribe un número: -5
-Es negativo
+Idatzi zenbaki bat:  -5
+Negatiboa da
 ```
 
 8.2  if else
@@ -78,34 +78,34 @@ Es negativo
 Con el if podemos crear un bloque que solo se ejecute si se cumple una condición. Pero ¿Qué pasa si queremos que el programa haga una cosa u otra según una condición? Para poder meter "la otra" opción, utilizamos una estructura if-else:
 
 ```Python
-if *condición*:
-    *instrucciones*
+if *baldintza*:
+    *eragiketak*
 else:
-    *instrucciones*
+    *eragiketak*
 ```
 
 Por ejemplo:
 
 ```Python
-nombre = input("Dime tu nombre: ")
-if nombre != "":
-    print("Hola ", nombre)
+izena = input("Eman zure izena: ")
+if izena != "":
+    print("Kaixo ", izena)
 else:
-    print("¡No has metido nada!")
+    print("Ez duzu ezer sartu!")
 ```
 
 Podría verse algo así, según lo que meta el usuario:
 
 ```console
-Dime tu nombre: Ada
-Hola Ada
+Eman zure izena: Ada
+Kaixo Ada
 ```
 
 Pero si el usuario simplemente pulsa enter sin escribir nada:
 
 ```console
-Dime tu nombre:
-¡No has metido nada!
+Eman zure izena:
+Ez duzu ezer sartu!
 ```
 
 ### 8.2.1    Ejercicio 1.1
@@ -113,19 +113,19 @@ Dime tu nombre:
 Escribe un programa que solicite un texto al usuario. Si el texto es "saluda" debe mostrar un saludo, en caso contrario debe mostrar un mensaje que diga "no entiendo".
 
 ```Python
-texto = input("Introduce un texto: ")
+texto = input("Sartu testua: ")
 
 if texto == "saludo":
-    print("Hola!")
+    print("Kaixo!")
 else:
-    print("No entiendo.")
+    print("Ez dut ulertzen.")
 ```
 
 Resultado:
 
 ```console
-Introduce un texto: no sé
-No entiendo.
+Sartu testua: ez dakit
+z dut ulertzen.
 ```
 
 8.3  if elif else
@@ -134,29 +134,29 @@ No entiendo.
 Existe otra variante cuando necesitamos comprobar varias condiciones. Para eso existe la estructura if-elif-else:
 
 ```Python
-if *condición1*:
-    *instrucciones*
-elif: *condición2*:
-    *instrucciones*
-elif *condición3*
-    *instrucciones*
+if *baldintza*:
+    *eragiketak*
+elif: *baldintza*:
+    *eragiketak*
+elif *baldintza*
+    *eragiketak*
 else:
-    *instrucciones*
+    *eragiketak*
 ```
 
 Supongamos que queremos un programa que sea capaz de saludar en distintos idiomas. Podríamos crear un programa como el siguiente:
 
 ```Python
-idioma = input("¿Qué idioma hablas?")
+hizkuntza = input("Zein da zure hizkuntza?")
 
-if idioma == "Español":
+if idioma == "Euskara":
+    print("Kaixo"):
+elif idioma == "Espainola":
     print("Hola"):
-elif idioma == "Inglés":
-    print("Hello"):
-elif idioma == "Francés":
-    print("Salut")
+elif idioma == "Ingelera":
+    print("Hello")
 else:
-    print("No conozco ese idioma")
+    print("Ez dut hizkuntz hori ezagutzen")
 ```
 
 Podemos tener tantos elif como hagan falta.
@@ -166,46 +166,46 @@ Podemos tener tantos elif como hagan falta.
 Escribe un programa que solicite un texto al usuario. Si el texto es "mañana", debe mostrar el mensaje "Buenos días", si el texto es "tarde" debe mostrar el mensaje "Buenas tardes", y si no debe mostrar el mensaje "Buenas noches"
 
 ```Python
-texto = input("Introduce un texto: ")
+testua = input("Idatzi testua: ")
 
-if texto == "mañana":
-    print("Buenos días.")
-elif texto == "tarde":
-    print("Buenas tardes.")
-elif texto == "noche":
-    print("Buenas noches.")
+if testua == "goiza":
+    print("Egun on.")
+elif testua == "arratsaldea":
+    print("Arratsalde on.")
+elif testua == "gaua":
+    print("Gabon.")
 else:
-    print("No entiendo.")
+    print("Ez dut ulertzen.")
 ```
 
 Resultado:
 
 ```console
-Introduce un texto: tarde
-Buenas tardes.
+Idatzi testua: arratsalde
+Arratsalde on.
 ```
 ### 8.3.2    Ejercicio 1.3
 
 Crea un programa que solicite al usuario dos valores enteros, los compare y muestre por pantalla si uno es mayor que el otro o si son iguales.
 
 ```Python
-numero1 = input("Sartu zenbaki bat:")
-numero2 = input("Introduce otro número: ")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat: ")
 
-if numero1 > numero2:
-  print(numero1, " es mayor que ", numero2)
-elif numero1 < numero2:
-  print(numero1, " es menor que ", numero2)
+if balio1 > balio2:
+    print(balio1, " ", balio2, " baino handiagoa da")
+elif balio1 < balio2:
+    print(balio1, " ", balio2, " baino txikiagoa da")
 else:
-  print(numero1, " es igual que ", numero2)
+    print(balio1, " ", balio2, "berdinak dira")
 ```
 
 Resultado:
 
 ```console
 Sartu zenbaki bat:5
-Introduce otro número: 10
-5 es menor que 10
+Sartu beste zenbaki bat: 10
+5 10 baino txikiagoa da
 ```
 
 8.4  Ejercicios propuestos
@@ -216,23 +216,23 @@ Introduce otro número: 10
 Crea un programa que solicite al usuario dos valores enteros y muestre por pantalla si el primero es múltiplo del segundo. Para saber si un número es múltiplo del otro, debes hacer la operación módulo (%) entre ellos: si es 0, será múltiplo.
 
 ```Python
-numero1 = input("Sartu zenbaki bat:")
-numero2 = input("Introduce otro número: ")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat: ")
 
-resto = int(numero1) % int(numero2)
+resto = int(balio1) % int(balio2)
 
 if resto == 0:
-  print(numero1, " es múltiplo de ", numero2)
+  print(balio1, " zenbakia ", balio2, " zenbakiaren multiploa da.")
 else:
-  print(numero1, " NO es múltiplo de ", numero2)
+  print(balio1, " zenbakia ez da ", balio2, "ren multiploa.")
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:40
-Introduce otro número: 4
-40 es múltiplo de 4
+Sartu zenbaki bat: 40
+Sartu beste zenbaki bat: 4
+40 zenbakia ez da 4ren mutiploa
 ```
 
 ### 8.4.2    Ejercicio 1.1
@@ -240,25 +240,25 @@ Introduce otro número: 4
 Crea un programa que solicite al usuario un número entero y haga lo siguiente: primero debe mostrar por pantalla si el número es negativo o positivo. Luego, si el número es positivo lo debe convertir a negativo y si es negativo lo debe convertir a positivo.
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if numero >= 0:
-    print(numero, " es positivo")
+if zenbakia >= 0:
+    print(zenbakia, " positiboa da")
 else:
-    print(numero, " es negativo")
+    print(zenbakia, " negatiboa da")
 
-numero = -numero
+zenbakia = -zenbakia
 
-print("Conversión: ", numero)
+print("Biraketa: ", zenbakia)
 ```
 
 Resultado:
 
 ```console
 Sartu zenbaki bat:-6
--6 es negativo
-Conversión: 6
+-6 negatiboa da
+Biraketa: 6
 ```
 
 ### 8.4.3    Ejercicio 1.3
@@ -266,41 +266,41 @@ Conversión: 6
 Escribe un programa que solicite un número un mes del año y muestre el número de días que tiene. En caso de introducir un mes desconocido, mostrar un mensaje de Mes desconocido.
 
 ```Python
-mes = input("Introduce un mes del año: ")
+hilabetea = input("Sartu urteko hilabete bat: ")
 
-if mes == "Enero":
-    print("31 días")
-elif mes == "Febrero":
-    print("28/29 días")
-elif mes == "Marzo":
-    print("31 días")
-elif mes == "Abril":
-    print("30 días")
-elif mes == "Mayo":
-    print("31 días")
-elif mes == "Junio":
-    print("30 días")
-elif mes == "Julio":
-    print("31 días")
-elif mes == "Agosto":
-    print("31 días")
-elif mes == "Septiembre":
-    print("30 días")
-elif mes == "Octubre":
-    print("31 días")
-elif mes == "Noviembre":
-    print("30 días")
-elif mes == "Diciembre":
-    print("31 días")
+if hilabetea == "Urtarrila":
+    print("31 egun ditu")
+elif hilabetea == "Otsaila":
+    print("28/29 egun ditu")
+elif hilabetea == "Martxoa":
+    print("31 egun ditu")
+elif hilabetea == "Apirila":
+    print("30 egun ditu")
+elif hilabetea == "Maiatza":
+    print("31 egun ditu")
+elif hilabetea == "Ekaina":
+    print("30 egun ditu")
+elif hilabetea == "Uztaila":
+    print("31 egun ditu")
+elif hilabetea == "Abuztua":
+    print("31 egun ditu")
+elif hilabetea == "Iraila":
+    print("30 egun ditu")
+elif hilabetea == "Urria":
+    print("31 egun ditu")
+elif hilabetea == "Azaroa":
+    print("30 egun ditu")
+elif hilabetea == "Abendua":
+    print("31 egun ditu")
 else:
-    print("Mes desconocido")
+    print("Hilabete ezezaguna")
 ```
 
 Resultado:
 
 ```console
-Introduce un mes del año: Junio
-30 días
+Sartu urteko hilabete bat: Ekaina
+30 egun ditu
 ```
 
 ### 8.4.4    Ejercicio 1.3
@@ -308,24 +308,24 @@ Introduce un mes del año: Junio
 Crea un programa que solicite al usuario un número entero y muestre por pantalla si ese número es par y positivo. En caso contrario debe indicar si es negativo, impar o ambos.
 
 ```Python
-numero = input("Sartu zenbaki bat:")
-numero = int(numero)
+zenbaki = input("Sartu zenbaki bat: ")
+zenbaki = int(zenbaki)
 
-if numero >= 0 and numero % 2 == 0:
-    print(numero, " es par y positivo")
-elif numero < 0 and numero % 2 != 0:
-    print(numero, " es impar y negativo")
-elif numero < 0:
-    print(numero, " es negativo")
+if zenbaki >= 0 and zenbaki % 2 == 0:
+    print(zenbaki, " bikotia eta positiboa da")
+elif zenbaki < 0 and zenbaki % 2 != 0:
+    print(zenbaki, " bakoitia eta negatiboa da")
+elif zenbaki < 0:
+    print(zenbaki, " negatiboa da")
 else:
-    print(numero, " es impar")
+    print(zenbaki, " bakoitia da")
 ```
 
 Resultado:
 
 ```console
-Sartu zenbaki bat:-9
--9 es impar y negativo
+Sartu zenbaki bat: -9
+-9 bakoitia eta negatiboa da
 ```
 
 ### 8.4.5    Ejercicio 1.4
@@ -341,24 +341,24 @@ Crea un programa que solicite al usuario su peso en kilos y su altura en centím
 - Si el IMC es superior a 30 se muestra el mensaje: "Tienes un problema de obesidad".
 
 ```Python
-peso = input("Introduce tu peso: ")
-altura = input("Introduce tu altura: ")
-peso = int(peso)
-altura = int(altura)
+pisua = input("Sartu zure pisua: ")
+altuera = input("Sartu zure altuera: ")
+pisua = int(pisua)
+altuera = int(altuera)
 
-imc = peso / (altura * altura)
+emaitza = pisua / (altuera * altuera)
 
-imc = (imc * 10000)
-print("Tu imc: ", imc)
+imc = (emaitza * 10000)
+print("Zure IMC: ", imcRedondeado)
 
 if imc < 16 :
-  print("Necesitas comer más")
+  print("Beharrezkoa da gehiago jan")
 elif imc >= 16 and imc < 25:
-  print("Estás bien")
+  print("Ongi zaude")
 elif imc >= 25 and imc < 30:
-  print("Tienes sobrepeso")
+  print("Gorputz gordinagoa duzu")
 else:
-  print("Tienes un problema de obesidad")
+  print("Obesitate arazoa daukazu")
 ```
 
 Resultado:
@@ -385,27 +385,27 @@ Crea un programa que solicite al usuario un dorsal de jugador y haga lo siguient
 - Para cualquier otra opción el texto será "Cualquiera".
 
 ```Python
-dorsal = input("Introduce dorsal: ")
-dorsal = int(dorsal)
+zenbakia = input("Sartu zenbakia: ")
+zenbakia = int(zenbakia)
 
-if dorsal >= 0 and dorsal <= 99:
-  if dorsal == 1:
-      print("Portero")
-  elif dorsal >= 1 and dorsal <= 5:
-      print("Defensa")
-  elif dorsal >= 6 and dorsal <= 8 or dorsal == 11:
-      print("Centrocampista")
-  elif dorsal == 9:
-      print("Delantero")
-  else:
-      print("Cualquiera")
+if zenbakia >= 0 and zenbakia <= 99:
+  if zenbakia == 1:
+      print("Atari gizona")
+  elif zenbakia >= 1 and zenbakia <= 5:
+      print("Defentsa jokalaria")
+  elif zenbakia >= 6 and zenbakia <= 8 or zenbakia == 11:
+      print("Erdilari jokalaria")
+  elif zenbakia == 9:
+      print("Aurrelari jokalaria")
+  else:
+      print("Norbera")
 else:
-    print("Error, el dorsal no está entre 0 y 99")
+    print("Errorea, zenbakia ez dago 0 eta 99 artean")
 ```
 
 Resultado:
 
 ```console
-Introduce dorsal: 11
-Centrocampista
+Sartu zenbakia: 11
+Erdilari jokalaria
 ```
